--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,10 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.6
+  camera: ^0.10.0+3
+  google_ml_kit: ^0.6.0
+  image: ^3.0.1
+  path_provider: ^2.0.11
 dev_dependencies:
   flutter_test:
     sdk: flutter
