--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,10 +11,12 @@ dependencies:
   camera: ^0.10.0+3
   google_ml_kit: ^0.18.0
   image: ^3.0.1
-  path_provider: ^2.0.11
+  path_provider: ^2.1.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.0
 flutter:
   uses-material-design: true
+  assets:
+    - assets/IMG_3201.PNG
