--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   google_ml_kit: ^0.18.0
   image: ^3.0.1
   path_provider: ^2.1.3
+  logger: ^2.3.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
